- CE364 - WCAG 2 AA Minimum Contrast issue between background colors of interim containers and anchor tags.

--- a/src/SFA.DAS.FindEmploymentSchemes.Web/wwwroot/css/site.css
+++ b/src/SFA.DAS.FindEmploymentSchemes.Web/wwwroot/css/site.css
@@ -610,3 +610,7 @@ table#comparison-results-table th:first-child {
     .interim-contents-section-component ul li::marker {
         color: #1D70B8;
     }
+
+[data-type="interim-container"] a {
+    font-weight: bold;
+}
